--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
       <div class="mini">Hi</div>
       <h1>I'm <span class="accent">Samrat</span><br/>a Frontend Developer</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
-        dolorem eum laudantium, unde voluptatum nemo non exercitationem neque ab
-        delectus voluptas asperiores architecto ad eveniet mollitia provident
-        harum pariatur porro.
+        I am a driven Electronics and Communication Engineering student dedicated to building next-generation digital solutions. My expertise in Data Structures & Algorithms ensures I write optimized, scalable code, while my proficiency in Web Development (front-end and back-end) allows me to bring projects to life. By integrating principles of Artificial Intelligence, I create intelligent applications that solve real-world problems efficiently. I am eager to leverage this unique skill set in an challenging professional environment.
       </p>
       <div class="actions">
         <a class="btn ghost bounce" href="#resume"><i class="fa-solid fa-file-arrow-down"></i> Resume</a>
@@ -81,10 +78,11 @@ My philosophy is simple: code with clarity, design with empathy, and deliver wit
   </section> -->
 
 
-  <!-- project -->
-  <!-- <section class="projects reveal" id="projects">
+  <section class="projects reveal" id="projects">
     <h2 class="section-title">My <span class="accent">Projects</span></h2>
-    <div class="projects-grid">
+
+    <h2 class="commingsoon">Comming Soon!!!!</h2>
+    <!-- <div class="projects-grid">
       <div class="project-tile">
         <div class="project-content">
           <div class="project-preview">
@@ -109,83 +107,8 @@ My philosophy is simple: code with clarity, design with empathy, and deliver wit
           </div>
         </div>
       </div>
-
-      <div class="project-tile">
-        <div class="project-content">
-          <div class="project-preview">
-            <img src="project2.jpg" alt="Task Manager">
-          </div>
-          <div class="project-info">
-            <div class="project-tags">
-              <span>React</span>
-              <span>Node.js</span>
-              <span>MongoDB</span>
-            </div>
-            <h3>Task Manager</h3>
-            <p>Full-stack task management application with real-time updates.</p>
-            <div class="project-links">
-              <a href="#" target="_blank" aria-label="Live Demo">
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </a>
-              <a href="#" target="_blank" aria-label="View Code">
-                <i class="fa-brands fa-github"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="project-tile">
-        <div class="project-content">
-          <div class="project-preview">
-            <img src="project3.jpg" alt="Weather App">
-          </div>
-          <div class="project-info">
-            <div class="project-tags">
-              <span>JavaScript</span>
-              <span>API</span>
-              <span>CSS</span>
-            </div>
-            <h3>Weather App</h3>
-            <p>Real-time weather dashboard with location-based updates.</p>
-            <div class="project-links">
-              <a href="#" target="_blank" aria-label="Live Demo">
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </a>
-              <a href="#" target="_blank" aria-label="View Code">
-                <i class="fa-brands fa-github"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="project-tile">
-        <div class="project-content">
-          <div class="project-preview">
-            <img src="project4.jpg" alt="E-Commerce Site">
-          </div>
-          <div class="project-info">
-            <div class="project-tags">
-              <span>React</span>
-              <span>Redux</span>
-              <span>Firebase</span>
-            </div>
-            <h3>E-Commerce Site</h3>
-            <p>Modern e-commerce platform with payment integration.</p>
-            <div class="project-links">
-              <a href="#" target="_blank" aria-label="Live Demo">
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </a>
-              <a href="#" target="_blank" aria-label="View Code">
-                <i class="fa-brands fa-github"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
+    </div> -->
+  </section> 
 
   <!-- experience -->
 
@@ -195,21 +118,28 @@ My philosophy is simple: code with clarity, design with empathy, and deliver wit
 
   <!-- certifica -->
 
-  <!-- <section class="certification reveal" id="certification">
+   <section class="certification reveal" id="certification"> 
     <h2 class="section-title">My <span class="accent">Certifications</span></h2>
     <div class="cert-grid">
       <div class="cert-card fade-in">
+        <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=468F2900158F4E11C5D82FF4D9F6378D7272CA91727367F61C3867C8AD25F56B" target="
+        "</a>
         <div class="cert-icon">
           <i class="fa-solid fa-award"></i>
         </div>
-        <h3>Web Development</h3>
-        <p>Full Stack Development</p>
-        <span class="cert-issuer">Udemy</span>
-        <div class="cert-date">2023</div>
-        <a href="#" class="cert-link">View Certificate <i class="fa-solid fa-arrow-right"></i></a>
+        <h3>Oracle Cloud Infrastructure 2025 Certified AI Foundations Associate</h3>
+        <p>Artificial Intelligence (AI)</p>
+        <p>Machine Learning (ML)</p>
+        <P>Deep Learning</P>
+        <span class="cert-issuer">Oracle University</span>
+        <div class="cert-date">Oct-2025</div>
+        <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=468F2900158F4E11C5D82FF4D9F6378D7272CA91727367F61C3867C8AD25F56B" target="
+        " class="cert-link">View Certificate <i class="fa-solid fa-arrow-right"></i></a>
       </div>
 
-      <div class="cert-card fade-in">
+      
+
+      <!-- <div class="cert-card fade-in">
         <div class="cert-icon">
           <i class="fa-solid fa-code"></i>
         </div>
@@ -218,9 +148,9 @@ My philosophy is simple: code with clarity, design with empathy, and deliver wit
         <span class="cert-issuer">freeCodeCamp</span>
         <div class="cert-date">2023</div>
         <a href="#" class="cert-link">View Certificate <i class="fa-solid fa-arrow-right"></i></a>
-      </div>
+      </div> -->
 
-      <div class="cert-card fade-in">
+      <!-- <div class="cert-card fade-in">
         <div class="cert-icon">
           <i class="fa-brands fa-react"></i>
         </div>
@@ -229,9 +159,9 @@ My philosophy is simple: code with clarity, design with empathy, and deliver wit
         <span class="cert-issuer">Coursera</span>
         <div class="cert-date">2024</div>
         <a href="#" class="cert-link">View Certificate <i class="fa-solid fa-arrow-right"></i></a>
-      </div>
+      </div> -->
     </div>
-  </section> -->
+  </section>
 
 
   <!--skills-->
