hamburger navbar update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <!-- NAVBAR -->
   <nav class="nav">
     <div class="brand">SAMRAT <span>HARSH</span> KUMAR</div>
-    <div class="links">
+    <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
+    <div class="links" id="navLinks">
       <a href="#home" class="active">Home</a>
       <a href="#about">About Me</a>
       <a href="#resume">Resume</a>
@@ -121,20 +126,25 @@ My philosophy is simple: code with clarity, design with empathy, and deliver wit
    <section class="certification reveal" id="certification"> 
     <h2 class="section-title">My <span class="accent">Certifications</span></h2>
     <div class="cert-grid">
-      <div class="cert-card fade-in">
-        <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=468F2900158F4E11C5D82FF4D9F6378D7272CA91727367F61C3867C8AD25F56B" target="
-        "</a>
-        <div class="cert-icon">
-          <i class="fa-solid fa-award"></i>
+      <div class="cert-tile fade-in">
+        <div class="cert-content">
+          <div class="cert-preview">
+            <img src="001.png" alt="Oracle AI Foundations Certificate" onerror="this.src='https://via.placeholder.com/800x450?text=Certificate'" />
+          </div>
+          <div class="cert-info">
+            <h3 class="cert-title">Oracle Cloud Infrastructure 2025 — Certified AI Foundations Associate</h3>
+            <div class="cert-meta">Oracle University • Oct 2025</div>
+            <div class="cert-tags">
+              <span>Artificial Intelligence</span>
+              <span>Machine Learning</span>
+              <span>Deep Learning</span>
+            </div>
+            <div class="cert-actions">
+              <a class="cert-link" href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=468F2900158F4E11C5D82FF4D9F6378D7272CA91727367F61C3867C8AD25F56B" target="_blank">View Certificate <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+              <a class="cert-link" href="#" aria-label="Issuer Site"><i class="fa-solid fa-award"></i></a>
+            </div>
+          </div>
         </div>
-        <h3>Oracle Cloud Infrastructure 2025 Certified AI Foundations Associate</h3>
-        <p>Artificial Intelligence (AI)</p>
-        <p>Machine Learning (ML)</p>
-        <P>Deep Learning</P>
-        <span class="cert-issuer">Oracle University</span>
-        <div class="cert-date">Oct-2025</div>
-        <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=468F2900158F4E11C5D82FF4D9F6378D7272CA91727367F61C3867C8AD25F56B" target="
-        " class="cert-link">View Certificate <i class="fa-solid fa-arrow-right"></i></a>
       </div>
 
       
